# python_basics_pydantic

./: .gitignore  ARCHITECTURAL_REVIEW.md  DEVELOPER_SETUP.md  DEVELOPMENT_SETUP.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  run_version.py
advanced/: README.md  requirements.txt
advanced/app/components/: charts.py  styling.py
advanced/app/pages/: dashboard.py  database_management.py  edit_employee.py
advanced/src/database/: __init__.py  models.py  repository.py
app/components/: forms.py
app/pages/: add_employee.py  view_employees.py
app/services/: database_service.py  employee_service.py
basic/: README.md  app.py  requirements.txt
data/: app.db  app.db-shm  app.db-wal
examples/: streamlit_app.py
examples/api/: api_client.py  employee_api.py
notebooks/: 01_python_basics.ipynb  02_pydantic_modeling.ipynb  03_databricks_integration.ipynb  04_test_verification.ipynb
src/database/: __init__.py  connection.py  models.py  repository.py  sample_data.py
src/models/: __init__.py  base.py  employee.py  user.py  validation.py
